[gd_scene load_steps=19 format=2]

[ext_resource path="res://Test_SandBox/Table_test.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Dices/D3.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Dices/D4.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Dices/D6.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Dices/D8.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Dices/D10.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Dices/D12.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Dices/D100.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Dices/D20.tscn" type="PackedScene" id=9]
[ext_resource path="res://Test_SandBox/Grid.tscn" type="PackedScene" id=10]
[ext_resource path="res://Test_SandBox/TileMap.tscn" type="PackedScene" id=11]
[ext_resource path="res://Test_SandBox/Camera2D.gd" type="Script" id=12]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.266667, 0.262745, 0.262745, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.266667, 0.262745, 0.262745, 1 )

[sub_resource type="StreamTexture" id=6]
flags = 4

[sub_resource type="AtlasTexture" id=7]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.0457746, 0.834507 )
colors = PoolColorArray( 0.824219, 0.795242, 0.795242, 1, 0.823529, 0.796078, 0.796078, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[node name="Table" type="Control" groups=["grupo01"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Bot" type="Node" parent="."]

[node name="HTTPRequest" type="HTTPRequest" parent="Bot"]

[node name="HeartbeatTimer" type="Timer" parent="Bot/HTTPRequest"]

[node name="InvalidSessionTimer" type="Timer" parent="Bot/HTTPRequest"]
one_shot = true

[node name="Background_base" type="CanvasLayer" parent="."]

[node name="Base_UI" type="CanvasLayer" parent="."]
layer = 100

[node name="Chat_&_Rolls_Results" type="Control" parent="Base_UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TabContainer" type="TabContainer" parent="Base_UI/Chat_&_Rolls_Results"]
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = 446.0
margin_bottom = -10.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.87
tab_align = 0

[node name="Chat_Buttons_ChatInput" type="VBoxContainer" parent="Base_UI/Chat_&_Rolls_Results/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
alignment = 1

[node name="Chat" type="RichTextLabel" parent="Base_UI/Chat_&_Rolls_Results/TabContainer/Chat_Buttons_ChatInput"]
margin_right = 428.0
margin_bottom = 465.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.41
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 2 )
bbcode_enabled = true
scroll_following = true

[node name="Dice_Buttons" type="HBoxContainer" parent="Base_UI/Chat_&_Rolls_Results/TabContainer/Chat_Buttons_ChatInput"]
margin_top = 469.0
margin_right = 428.0
margin_bottom = 509.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 0.08
__meta__ = {
"_edit_use_anchors_": false
}

[node name="d3_b" parent="Base_UI/Chat_&_Rolls_Results/TabContainer/Chat_Buttons_ChatInput/Dice_Buttons" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 50.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 0 )

[node name="d4_b" parent="Base_UI/Chat_&_Rolls_Results/TabContainer/Chat_Buttons_ChatInput/Dice_Buttons" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 54.0
margin_top = 0.0
margin_right = 104.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 0 )

[node name="d6_b" parent="Base_UI/Chat_&_Rolls_Results/TabContainer/Chat_Buttons_ChatInput/Dice_Buttons" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 108.0
margin_top = 0.0
margin_right = 158.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 0 )

[node name="d8_b" parent="Base_UI/Chat_&_Rolls_Results/TabContainer/Chat_Buttons_ChatInput/Dice_Buttons" instance=ExtResource( 5 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 162.0
margin_top = 0.0
margin_right = 212.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 0 )

[node name="d10_b" parent="Base_UI/Chat_&_Rolls_Results/TabContainer/Chat_Buttons_ChatInput/Dice_Buttons" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 216.0
margin_top = 0.0
margin_right = 266.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 0 )

[node name="d12_b" parent="Base_UI/Chat_&_Rolls_Results/TabContainer/Chat_Buttons_ChatInput/Dice_Buttons" instance=ExtResource( 7 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 270.0
margin_top = 0.0
margin_right = 320.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 0 )

[node name="d20_b" parent="Base_UI/Chat_&_Rolls_Results/TabContainer/Chat_Buttons_ChatInput/Dice_Buttons" instance=ExtResource( 9 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 324.0
margin_top = 0.0
margin_right = 374.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 0 )

[node name="d100_b" parent="Base_UI/Chat_&_Rolls_Results/TabContainer/Chat_Buttons_ChatInput/Dice_Buttons" instance=ExtResource( 8 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 378.0
margin_top = 0.0
margin_right = 428.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 0 )

[node name="Chat_Input" type="TextEdit" parent="Base_UI/Chat_&_Rolls_Results/TabContainer/Chat_Buttons_ChatInput"]
margin_top = 513.0
margin_right = 428.0
margin_bottom = 663.0
rect_min_size = Vector2( 0, 150 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 3 )
shortcut_keys_enabled = false
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SheetList" type="VBoxContainer" parent="Base_UI/Chat_&_Rolls_Results/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="Sheet Creator" type="Button" parent="Base_UI/Chat_&_Rolls_Results/TabContainer/SheetList"]
margin_right = 428.0
margin_bottom = 20.0
text = "Creat a sheet"

[node name="Settings" type="VBoxContainer" parent="Base_UI/Chat_&_Rolls_Results/TabContainer"]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = 432.0
margin_bottom = 56.0
rect_min_size = Vector2( 428, 664 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Base_UI/Chat_&_Rolls_Results/TabContainer/Settings"]
margin_right = 428.0
margin_bottom = 160.0
alignment = 1

[node name="Label" type="Label" parent="Base_UI/Chat_&_Rolls_Results/TabContainer/Settings/VBoxContainer"]
margin_right = 428.0
margin_bottom = 14.0
text = "Grid"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="Base_UI/Chat_&_Rolls_Results/TabContainer/Settings/VBoxContainer"]
margin_top = 18.0
margin_right = 428.0
margin_bottom = 78.0

[node name="LineEdit" type="LineEdit" parent="Base_UI/Chat_&_Rolls_Results/TabContainer/Settings/VBoxContainer/CenterContainer"]
margin_left = 184.0
margin_right = 244.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 0
align = 1

[node name="Label2" type="Label" parent="Base_UI/Chat_&_Rolls_Results/TabContainer/Settings/VBoxContainer"]
margin_top = 82.0
margin_right = 428.0
margin_bottom = 96.0
text = "x"
align = 1
valign = 1

[node name="CenterContainer2" type="CenterContainer" parent="Base_UI/Chat_&_Rolls_Results/TabContainer/Settings/VBoxContainer"]
margin_top = 100.0
margin_right = 428.0
margin_bottom = 160.0

[node name="LineEdit" type="LineEdit" parent="Base_UI/Chat_&_Rolls_Results/TabContainer/Settings/VBoxContainer/CenterContainer2"]
margin_left = 184.0
margin_right = 244.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 0
align = 1

[node name="Base_Menu" type="HBoxContainer" parent="Base_UI/Chat_&_Rolls_Results"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -160.0
margin_top = 10.0
margin_bottom = 40.0

[node name="Main_Menu" type="Button" parent="Base_UI/Chat_&_Rolls_Results/Base_Menu"]
margin_right = 84.0
margin_bottom = 30.0
text = "Main menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="Base_UI/Chat_&_Rolls_Results/Base_Menu"]
margin_left = 88.0
margin_right = 151.0
margin_bottom = 30.0
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sheet_Spaw" type="CanvasLayer" parent="."]
layer = 120

[node name="Node2D" type="Node2D" parent="."]
visible = false

[node name="Grid" parent="Node2D" instance=ExtResource( 10 )]
visible = false

[node name="Camera2D" parent="Node2D/Grid" index="0"]
current = false

[node name="TileMap" parent="Node2D/Grid" index="1"]
cell_size = Vector2( 100, 100 )

[node name="Node2D2" type="Node2D" parent="."]

[node name="Grid" type="Node2D" parent="Node2D2"]

[node name="Camera2D" type="Camera2D" parent="Node2D2/Grid"]
position = Vector2( 573.906, 339.029 )
current = true
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource( 12 )

[node name="Player" type="Sprite" parent="Node2D2/Grid/Camera2D"]
position = Vector2( 0.0449219, -93.3797 )
texture = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="Node2D2/Grid/Camera2D"]
texture = SubResource( 7 )

[node name="TextureRect" type="TextureRect" parent="Node2D2/Grid/Camera2D"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4965.0
margin_top = -3052.0
margin_right = 4571.0
margin_bottom = 3569.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 5 )
expand = true

[node name="TileMap" parent="Node2D2/Grid" instance=ExtResource( 11 )]

[connection signal="timeout" from="Bot/HTTPRequest/HeartbeatTimer" to="Bot/HTTPRequest" method="_on_HeartbeatTimer_timeout"]
[connection signal="timeout" from="Bot/HTTPRequest/InvalidSessionTimer" to="Bot/HTTPRequest" method="_on_InvalidSessionTimer_timeout"]
[connection signal="pressed" from="Base_UI/Chat_&_Rolls_Results/TabContainer/Chat_Buttons_ChatInput/Dice_Buttons/d3_b" to="." method="_on_d3_b_pressed"]
[connection signal="pressed" from="Base_UI/Chat_&_Rolls_Results/TabContainer/Chat_Buttons_ChatInput/Dice_Buttons/d4_b" to="." method="_on_d4_b_pressed"]
[connection signal="pressed" from="Base_UI/Chat_&_Rolls_Results/TabContainer/Chat_Buttons_ChatInput/Dice_Buttons/d6_b" to="." method="_on_d6_b_pressed"]
[connection signal="pressed" from="Base_UI/Chat_&_Rolls_Results/TabContainer/Chat_Buttons_ChatInput/Dice_Buttons/d8_b" to="." method="_on_d8_b_pressed"]
[connection signal="pressed" from="Base_UI/Chat_&_Rolls_Results/TabContainer/Chat_Buttons_ChatInput/Dice_Buttons/d10_b" to="." method="_on_d10_b_pressed"]
[connection signal="pressed" from="Base_UI/Chat_&_Rolls_Results/TabContainer/Chat_Buttons_ChatInput/Dice_Buttons/d12_b" to="." method="_on_d12_b_pressed"]
[connection signal="pressed" from="Base_UI/Chat_&_Rolls_Results/TabContainer/Chat_Buttons_ChatInput/Dice_Buttons/d20_b" to="." method="_on_d20_b_pressed"]
[connection signal="pressed" from="Base_UI/Chat_&_Rolls_Results/TabContainer/Chat_Buttons_ChatInput/Dice_Buttons/d100_b" to="." method="_on_d100_b_pressed"]
[connection signal="button_up" from="Base_UI/Chat_&_Rolls_Results/TabContainer/SheetList/Sheet Creator" to="." method="_on_Sheet_Creator_button_up"]
[connection signal="text_changed" from="Base_UI/Chat_&_Rolls_Results/TabContainer/Settings/VBoxContainer/CenterContainer2/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="Base_UI/Chat_&_Rolls_Results/TabContainer/Settings/VBoxContainer/CenterContainer2/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="button_up" from="Base_UI/Chat_&_Rolls_Results/Base_Menu/Main_Menu" to="." method="_on_Main_Menu_button_up"]
[connection signal="button_up" from="Base_UI/Chat_&_Rolls_Results/Base_Menu/Settings" to="." method="_on_Settings_button_up"]

[editable path="Node2D/Grid"]
